# fastgen

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: pylint.yml  python-package.yml
fastgen/: __main__.py  constants.py  main.py
fastgen/apps/: generator_app.py
fastgen/blocks/: docker_blocks.py  env_blocks.py  main_blocks.py  pydantic_blocks.py
fastgen/constants/: path_constants.py
fastgen/enums/: generator_enums.py  manager_enums.py
fastgen/exceptions/: generator_exceptions.py
fastgen/generators/: base_generator.py  model_generator.py  router_generator.py  schema_generator.py
fastgen/managers/: base_manager.py  pip_manager.py  poetry_manager.py
test/: conftest.py  constants.py  test_app.py  test_g.py  test_info.py  test_new.py
